# dependency-update-metrics

./: .gitignore  .gitmodules  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  USAGE.md  commands.md  examples.md  pyproject.toml  requirements-dev.txt  requirements.txt  workflow.md
.github/workflows/: ci.yml
dependency_metrics/: __init__.py  analyzer.py  cache_config.py  cli.py  depsdev_client.py  depsdev_resolver.py  interfaces.py  models.py  osv_builder.py  osv_service.py  pypi_resolver.py  reporting.py  resolvers.py  time_utils.py
examples/: usage_examples.py
scripts/: filter_pypi_rows.py  publish.py  setup.sh
tests/: conftest.py  test_basic.py  test_bulk_csv.py  test_cache_config.py  test_cli_progress.py  test_cli_resume.py  test_crates_resolver.py  test_dependency_first_use.py  test_depsdev_client.py  test_depsdev_resolver.py  test_models.py  test_npm_resolver.py  test_npm_semver.py  test_osv.py  test_per_release.py  test_pypi_resolver.py  test_pypi_version_resolution.py  test_reporting.py  test_resolver_cache.py  test_severity_breakdown.py  test_time_utils.py
